<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:background="@color/lightpink"
        tools:context=".CheckOutActivity">

    <TextView
        android:id="@+id/mName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:padding="10dp"
        android:text="@string/food_name"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/mName"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:padding="10dp"/>

    <TextView
        android:id="@+id/mPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mName"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/mPrice"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mPrice"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:padding="10dp"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/mAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:layout_marginStart="27dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/address"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/Qty"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/address"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:text="@string/qty"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mAddress"
        android:layout_marginStart="-26dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/mAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/mItem"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/Qty"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:text="@string/Item"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/Item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mAddress"
        android:layout_marginStart="31dp"
        android:layout_marginTop="106dp"
        android:layout_toEndOf="@id/mItem"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/mTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mItem"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:padding="10dp"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Item"
        android:layout_marginStart="47dp"
        android:layout_marginTop="34dp"
        android:layout_toEndOf="@id/mTotal"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <com.khalti.widget.KhaltiButton
        android:id="@+id/khalti_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/total"
        android:layout_marginStart="100dp"
        android:layout_marginTop="57dp"
        app:khalti_button_style="m_banking"
        android:background="@color/white"
        tools:ignore="MissingClass" />





</RelativeLayout>
